tests/checker/bad/lib/TestLibDiamondTopCycle.scillib
import TestLibDiamondLeftCycle TestLibDiamondRightCycle

library TestLibDiamondTopCycle
